MNGW-5589: Remove dashed outline after clicking button, re-aligned dashboard boxes, fixed dropdown menu, and edited mockAPI data to closely resemble string lengths in the actual app.

--- a/app/styles/common/_tables.scss
+++ b/app/styles/common/_tables.scss
@@ -42,7 +42,6 @@
     height: 75px;
     text-align: left;
     vertical-align: top;
-    position: relative;
     padding: 10px 15px;
     border: 1px solid $tableBorder;
 
